# python-projects

./: README.md  pyproject.toml
.github/actions/python-test/: action.yml
.github/workflows/: ci.yml  file-organiser-test.yml  tests.yml
.github/workflows/actions/: tests.yml
Beginner/file-organiser/: file-organiser.py  requirements.txt
Beginner/file_organiser/: .coveragerc  Makefile  README.md  file_organiser.py  pyproject.toml  requirements.txt
Beginner/file_organiser/src/: file_organiser.py
Beginner/file_organiser/tests/: test_file_organiser.py
Beginner/file_organiser/tests/unit/: test_file_organiser.py
